// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`URLs should be correctly generated when urlSchema is set to auto base, no url prefix, no suffix 1`] = `
[
  [
    "README.md",
    "/",
  ],
  [
    "docs/about.md",
    "/docs/about",
  ],
  [
    "docs/custom-url.md",
    "/test-custom/url",
  ],
  [
    "docs/how-it-works.md",
    "/docs/how-it-works",
  ],
  [
    "docs/html.md",
    "/docs/html",
  ],
  [
    "docs/math.md",
    "/docs/math",
  ],
  [
    "docs/static-asset.md",
    "/docs/static-asset",
  ],
  [
    "docs/table.md",
    "/docs/table",
  ],
  [
    "packages/package1/components/button.md",
    "/packages/package1/components/button",
  ],
  [
    "packages/package1/docs/intro.md",
    "/packages/package1/docs/intro",
  ],
  [
    "packages/package2/docs/overview.md",
    "/packages/package2/docs/overview",
  ],
  [
    "packages/package2/docs/styles.md",
    "/packages/package2/docs/styles",
  ],
  [
    "packages/package1/components/form/index.md",
    "/packages/package1/components/form/",
  ],
  [
    "packages/package1/components/form/something-else.md",
    "/packages/package1/components/form/something-else",
  ],
]
`;

exports[`URLs should be correctly generated when urlSchema is set to auto when source defines url prefix and suffix 1`] = `
[
  [
    "README.md",
    "/docs/",
  ],
  [
    "docs/about.md",
    "/docs/docs/about.html",
  ],
  [
    "docs/custom-url.md",
    "/docs/test-custom/url.html",
  ],
  [
    "docs/how-it-works.md",
    "/docs/docs/how-it-works.html",
  ],
  [
    "docs/html.md",
    "/docs/docs/html.html",
  ],
  [
    "docs/math.md",
    "/docs/docs/math.html",
  ],
  [
    "docs/static-asset.md",
    "/docs/docs/static-asset.html",
  ],
  [
    "docs/table.md",
    "/docs/docs/table.html",
  ],
  [
    "packages/package1/components/button.md",
    "/docs/packages/package1/components/button.html",
  ],
  [
    "packages/package1/docs/intro.md",
    "/docs/packages/package1/docs/intro.html",
  ],
  [
    "packages/package2/docs/overview.md",
    "/docs/packages/package2/docs/overview.html",
  ],
  [
    "packages/package2/docs/styles.md",
    "/docs/packages/package2/docs/styles.html",
  ],
  [
    "packages/package1/components/form/index.md",
    "/docs/packages/package1/components/form/",
  ],
  [
    "packages/package1/components/form/something-else.md",
    "/docs/packages/package1/components/form/something-else.html",
  ],
]
`;
